# wani_scraper

./: .gitignore  README.md  out.txt  pyproject.toml  shell.nix
src/: kanji.py  main.py  utils.py  vocabulary.py
